syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";

service User {
  // 用户列表
  rpc GetUserList(PageInfo) returns (UserListResponse);
  // 查询用户： 通过手机号
  rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse);
  // 查询用户： 通过 User Id
  rpc GetUserById(IdRequest) returns (UserInfoResponse);
  // 添加用户
  rpc CreateUser(CreateUserInfo) returns (UserInfoResponse);
  // 修改用户
  rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty);
  // 检查密码
  rpc CheckPassword(PasswordCheckInfo) returns (CheckResponse);
}

// 检查密码
message CheckResponse {
  bool success = 1;
}

// 检查密码
message PasswordCheckInfo {
  string password = 1;
  string encryptedPassword = 2;
}

// 修改用户
message UpdateUserInfo {
  int32 id = 1;
  string nikeName = 2;
  string gender = 3;
  uint64 birthDay = 4;
}

// 添加用户
message CreateUserInfo {
  string nikeName = 1;
  string password = 2;
  string mobile = 3;
}

// 查询用户： 通过 User Id
message IdRequest{
  int32 id = 1;
}

// 查询用户： 通过手机号
message MobileRequest{
  string mobile = 1;
}

// 用户详情
message UserInfoResponse {
  int32 id = 1;
  string password = 2;
  string mobile = 3;
  string nikeName = 4;
  uint64 birthday = 5;
  string gender = 6;
  int32 role = 7;
}

// 用户列表
message UserListResponse {
  int32 total = 1;
  repeated UserInfoResponse data = 2;
}

// 分页信息
message PageInfo {
  uint32 pn = 1;
  uint32 pSize = 2;
}